# fava-quick-entry

./: .gitignore  README.md  pyproject.toml
src/fava_quick_entry/: FavaQuickEntry.js  __init__.py
src/fava_quick_entry/templates/: FavaQuickEntry.html
tests/: test_fava_quick_entry.py
tests/fixtures/: main.beancount
tests/fixtures/2024/: 04.beancount
