[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fava-quick-entry"
version = "0.0.1"
description = "Fava extension for quick Beancount transaction entry with live text preview"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "fava>=1.27",
    "beancount>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fava_quick_entry = ["templates/*.html", "FavaQuickEntry.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
